# trgs_slam

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/data/trnerf_dataset/fast_indoor/: lpips_timestamps.txt  pseudo_ground_truth_poses_trgs_slam.h5
assets/data/trnerf_dataset/fast_outdoor/: lpips_timestamps.txt  pseudo_ground_truth_poses_trgs_slam.h5
assets/data/trnerf_dataset/medium_indoor/: lpips_timestamps.txt  pseudo_ground_truth_poses_trgs_slam.h5
assets/data/trnerf_dataset/medium_outdoor/: lpips_timestamps.txt  pseudo_ground_truth_poses_trgs_slam.h5
assets/data/trnerf_dataset/slow_indoor/: pseudo_ground_truth_poses_trgs_slam.h5
assets/data/trnerf_dataset/slow_outdoor/: pseudo_ground_truth_poses_trgs_slam.h5
docker/: Dockerfile_pseudo_gt  Dockerfile_trgs_slam
evaluation/: view_trial.py
scripts/: run_generate_poses.sh  run_refine.sh  run_refine_all.sh  run_slam.sh  run_slam_all.sh
src/trgs_slam/: refine.py  run_refine.py  run_slam.py  slam.py
src/trgs_slam/datasets/: base_dataset.py  dataset_configs.py  trnerf_dataset.py
src/trgs_slam/gaussians/: gaussians.py  strategy.py
src/trgs_slam/renderer/: fpn.py  renderer.py
src/trgs_slam/tools/: metrics.py  nested_timer.py  viewer.py
src/trgs_slam/trajectory/: imu_utils.py  keyframes.py  trajectory.py
